Replace explicit lists of class-like kinds with Tree.CLASS_KINDS in Java checks